--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "express": "^4.16.0",
     "hawk": "^7.0.0",
     "hoek": "^5.0.3",
-    "mkdirp": "0.5.1",
+    "mkdirp": "^1.0.4",
     "request": "2.87.0",
     "request-digest": "^1.0.13",
     "shelljs": "0.8.3",
     "socket.io": "^2.1.1",
+    "winston": "3.2.1",
     "xml": "^1.0.1",
-    "xml2js": "^0.4.19",
-    "winston": "3.2.1"
+    "xml2js": "^0.4.19"
   }
 }
